--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,10 +6,10 @@ execute:
   echo: true
 
 book:
-  title: "YOUR PROJECT TITLE"
+  title: "Conditions Contributing to COVID-19 Deaths"
   author:
-    - AUTHOR1 (UNI1)
-    - AUTHOR2 (UNI2)
+    - Lucy Wu (mw3714)
+    - Felishia (fl2667)
   repo-url: https://github.com/YOUR_GITHUB_ACCOUNT/REPO_NAME
   date: today
   page-footer:
