--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,7 +10,7 @@ book:
   author:
     - Lucy Wu (mw3714)
     - Felishia (fl2667)
-  repo-url: https://github.com/YOUR_GITHUB_ACCOUNT/REPO_NAME
+  repo-url: https://github.com/LW0214/COVID-19-Deaths-Conditions.git
   date: today
   page-footer:
     right: |
